[package]
name = "rust-markdown-parser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.4.2"
comrak = "0.12.1"
askama = "0.10.5"
tower = { version = "0.4.11", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
async-fs = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
http = "0.2.5"
http-body = "0.4.4"